Add basic stuff.

--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+        <nav class="buttons">
+            <button class="home">Home</button>
+            <button class="menu">Menu</button>
+            <button class="about">About</button>
         </nav>
     </header>
     <div id="content">
-        
+
     </div>
 </body>
 </html>
