--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baratie</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         </nav>
     </header>
     <div id="content">
-        
+
     </div>
 </body>
 </html>
